--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Realistic Screwdriver Page Transition</title>
+  <title>Monkey Scroll Animation</title>
   <style>
     /* General Styles */
     body, html {
@@ -117,125 +117,113 @@
       color: white;
     }
 
-    /* Screwdriver and Screw */
-    .transition-container {
+    /* Monkey Hanging */
+    .monkey-container {
       position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
+      top: 10px;
+      right: 20px;
       z-index: 1000;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
+      pointer-events: none;
     }
 
-    .screwdriver-svg {
-      width: 150px;
+    .monkey {
+      width: 100px;
+      animation: hang 1s ease-in-out infinite alternate;
     }
 
-    .screw-svg {
-      width: 50px;
+    /* Hand Scroll Effect */
+    @keyframes hang {
+      0% {
+        transform: rotate(5deg);
+      }
+      100% {
+        transform: rotate(-5deg);
+      }
     }
 
-    /* Page Roll Effect */
-    .rolling-page {
+    /* Scrolling Animation */
+    .scroll-hand {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: white;
-      transform-origin: bottom center;
-      transform: scaleY(1);
-      z-index: 2000;
+      top: 50%;
+      right: 50px;
+      width: 30px;
+      height: 100px;
+      background: #6b4f30;
+      border-radius: 15px;
+      transform-origin: top center;
+      transform: rotate(-10deg);
+      display: none;
     }
 
-    /* Keyframes for Animations */
-    @keyframes unscrew {
+    @keyframes hand-move {
       0% {
-        transform: rotate(0deg);
+        transform: rotate(-10deg);
+      }
+      50% {
+        transform: rotate(10deg);
       }
       100% {
-        transform: rotate(360deg);
+        transform: rotate(-10deg);
       }
     }
 
-    @keyframes rollUp {
-      0% {
-        transform: scaleY(1);
-      }
-      100% {
-        transform: scaleY(0);
-      }
-    }
-
-    .unscrew {
-      animation: unscrew 1.5s linear forwards;
-    }
-
-    .roll-up {
-      animation: rollUp 1.5s ease-in-out forwards;
+    .scrolling .scroll-hand {
+      display: block;
+      animation: hand-move 0.5s ease-in-out infinite;
     }
   </style>
 </head>
 <body>
-  <!-- Transition Effect -->
-  <div class="transition-container">
-    <img class="screwdriver-svg" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Screwdriver_icon.svg" alt="Screwdriver">
-    <img class="screw-svg" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Flathead_screw.svg" alt="Screw">
+  <!-- Monkey Hanging -->
+  <div class="monkey-container">
+    <img class="monkey" src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Monkey_cartoon.svg" alt="Monkey">
   </div>
 
-  <!-- Rolling Page -->
-  <div class="rolling-page"></div>
+  <!-- Hand Scrolling Effect -->
+  <div class="scroll-hand"></div>
 
   <!-- Pages -->
   <div class="page">
-    <h1>Welcome to the Realistic Screwdriver Transition</h1>
-    <p>Scroll to see the effect.</p>
+    <h1>Welcome to the Monkey Scrolling Animation</h1>
+    <p>Scroll to see the monkey in action.</p>
   </div>
   <div class="page">
     <h1>Page 2</h1>
-    <p>The screwdriver and screw animation will run on transition.</p>
+    <p>The monkey scrolls the page by hand!</p>
   </div>
   <div class="page">
     <h1>Page 3</h1>
-    <p>Another page with the rolling carpet effect.</p>
+    <p>Have fun watching the monkey!</p>
   </div>
   <div class="page">
     <h1>Page 4</h1>
-    <p>The end of the transition effect.</p>
+    <p>The end of the animation effect.</p>
   </div>
 
   <script>
-    const screwdriver = document.querySelector('.screwdriver-svg');
-    const screw = document.querySelector('.screw-svg');
-    const rollingPage = document.querySelector('.rolling-page');
-    let isAnimating = false;
+    // Scroll Animation Logic
+    const scrollHand = document.querySelector('.scroll-hand');
+    let isScrolling = false;
 
     window.addEventListener('scroll', () => {
-      if (!isAnimating) {
-        isAnimating = true;
+      if (!isScrolling) {
+        isScrolling = true;
 
-        // Add unscrew animation
-        screw.classList.add('unscrew');
+        // Show the hand scrolling animation
+        document.body.classList.add('scrolling');
 
-        // Add rolling page animation after unscrewing
         setTimeout(() => {
-          rollingPage.classList.add('roll-up');
-        }, 1500);
-
-        // Reset animation after completion
-        setTimeout(() => {
-          rollingPage.classList.remove('roll-up');
-          screw.classList.remove('unscrew');
-          isAnimating = false;
-        }, 3000);
+          document.body.classList.remove('scrolling');
+          isScrolling = false;
+        }, 1000);
       }
     });
   </script>
 </body>
 </html>
-
 
 
 
