--- a/index.html
+++ b/index.html
@@ -123,14 +123,15 @@
 
         
 
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Runaway Button</title>
+  <title>Runaway Button Integration</title>
   <style>
-    body {
+    /* Styles for the runaway button section */
+    .runaway-section {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
@@ -138,16 +139,18 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #f0f0f0;
+      background-color: #f9f9f9;
+      position: relative;
     }
 
-    .button-container {
+    .runaway-button-container {
       position: relative;
       width: 100%;
-      height: 100vh; /* Full viewport height */
+      height: 100%; /* Full section height */
       display: flex;
       justify-content: center;
       align-items: center;
+      overflow: hidden; /* Prevent button from escaping */
     }
 
     .runaway-button {
@@ -168,14 +171,17 @@
   </style>
 </head>
 <body>
-  <div class="button-container">
-    <button class="runaway-button">My girlfriend's photos</button>
+  <!-- Runaway button section -->
+  <div class="runaway-section">
+    <div class="runaway-button-container">
+      <button class="runaway-button">Try to Click Me!</button>
+    </div>
   </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const button = document.querySelector('.runaway-button');
-      const container = document.querySelector('.button-container');
+      const button = document.querySelector('.runaway-section .runaway-button');
+      const container = document.querySelector('.runaway-section .runaway-button-container');
 
       button.addEventListener('mouseover', () => {
         const containerRect = container.getBoundingClientRect();
@@ -200,7 +206,6 @@
 </body>
 </html>
 
-              
 
 
 
