--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     // Prevent the button from being clicked (fallback in case the user gets lucky)
     button.addEventListener('click', (event) => {
       event.preventDefault();
-      alert("Nice try, but no clicking allowed!");
+      alert("Nice Try! You knew it was a prank!");
     });
   });
 </script>
