--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
         <!-- Resume Button -->
-        <a href="assets/resume.pdf" class="btn btn-primary" target="_blank" style="margin-right: 20px;">View Resume</a>
+        <a href="assets/pdf/resume.pdf" class="btn btn-primary" target="_blank" style="margin-right: 20px;">View Resume</a>
 
         <!-- Runaway Button -->
         <div class="runaway-button-container">
