--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </div>
 </section>
 
-<style>
+<--!<style>
   /* Resume button styling */
   .btn {
     padding: 10px 20px;
@@ -166,7 +166,7 @@
   .runaway-button:hover {
     background-color: #d32f2f;
   }
-</style>
+</style> -->
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
