--- a/index.html
+++ b/index.html
@@ -117,15 +117,16 @@
         <a href="assets/pdf/YamanResume.pdf" class="btn btn-primary" target="_blank" style="margin-right: 20px;">View Resume</a>
 
         <!-- Runaway Button -->
-        <div class="runaway-button-container">
+      <!--  <div class="runaway-button-container">
           <button class="runaway-button">My Girlfriend's Pictures</button>
-        </div>
+        </div> -->
       </div>
     </div>
-  </div>
+  </div> 
 </section>
 
-<--!<style>
+
+  <style>
   /* Resume button styling */
   .btn {
     padding: 10px 20px;
@@ -143,6 +144,7 @@
     background-color: #0056b3;
   }
 
+     <!--
   /* Styles for the runaway button */
   .runaway-button-container {
     position: relative;
@@ -150,7 +152,8 @@
     margin-top: 20px;
     overflow: hidden; /* Ensures the button stays within the container */
   }
-
+-->
+    <!--
   .runaway-button {
     position: absolute;
     padding: 10px 20px;
@@ -166,8 +169,9 @@
   .runaway-button:hover {
     background-color: #d32f2f;
   }
-</style> -->
-
+    -->
+</style> 
+ 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     const button = document.querySelector('#about .runaway-button');
