--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Yaman's Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  
+<meta property="og:title" content="Yaman's Portfolio">
+<meta property="og:description" content="Learn more about me and my experiences.">
+<meta property="og:image" content="assets/img/path-to-your-cover-image.jpg">
+<meta property="og:url" content="https://yrajp.github.io">
+<meta property="og:type" content="website">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
