--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <meta property="og:title" content="Yaman's Portfolio">
 <meta property="og:description" content="Learn more about me and my experiences.">
-<meta property="og:image" content="assets/img/path-to-your-cover-image.jpg">
+<meta property="og:image" content="https://yrajp.github.io/assets/img/cover.jpg">
 <meta property="og:url" content="https://yrajp.github.io">
 <meta property="og:type" content="website">
 
