--- a/index.html
+++ b/index.html
@@ -103,14 +103,17 @@
     <!-- ======= About me Section ======= -->
     
         
-     <section id="about">
+ <section id="about">
   <div class="box-shadow-full">
     <div class="row">
+      <!-- Left column: photo -->
       <div class="col-sm-6 col-md-5">
         <div class="about-img">
           <img src="assets/img/1685025666249.jpg" class="img-fluid rounded b-shadow-a" alt="">
         </div>
       </div>
+
+      <!-- Right column: info -->
       <div class="col-sm-6 col-md-7">
         <p><span class="title-s">Name: </span> <span>Yaman Pandey</span></p>
         <p><span class="title-s">Education: </span> <span>Masters in Manufacturing Engineering Technology </span></p>
@@ -119,20 +122,57 @@
         <p><span class="title-s">Email: </span> <span>yamanpandey2056@gmail.com</span></p>
         <p><span class="title-s">Phone: </span> <span>507-304-5525</span></p>
 
-        <!-- Resume Button -->
-        <a href="assets/pdf/Yaman Resume CI.pdf" class="btn btn-primary" target="_blank" style="margin-right: 20px;">View Resume</a>
+        <!-- Certification badge (appears on scroll) -->
+        <p class="mt-3">
+          <span class="title-s">Certification: </span>
+          <span id="certified-eit" class="eit-badge">Certified EIT</span>
+        </p>
 
-        <!-- Runaway Button -->
-      <!--  <div class="runaway-button-container">
-          <button class="runaway-button">My Girlfriend's Pictures</button>
-        </div> -->
-      </div>
+        <!-- Resume Button -->
+        <a href="assets/pdf/Yaman Resume CI.pdf" class="btn btn-primary" target="_blank" style="margin-right: 20px;">
+          View Resume
+        </a>
+
+        <!-- Social Icons -->
+        <div class="socials" style="margin-top: 20px;">
+          <ul>
+            <li>
+              <a target="_blank" href="https://www.facebook.com/yaman.pandey.3">
+                <span class="ico-circle"><i class="bi bi-facebook"></i></span>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.instagram.com/yrajp/?igshid=YmMyMTA2M2Y%3D">
+                <span class="ico-circle"><i class="bi bi-instagram"></i></span>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.linkedin.com/in/yaman-pandey-40a536165/">
+                <span class="ico-circle"><i class="bi bi-linkedin"></i></span>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.youtube.com/@yamanpandey8720">
+                <span class="ico-circle"><i class="bi bi-youtube"></i></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div><!-- /col right -->
+    </div><!-- /row -->
+
+    <!-- About me text -->
+    <div class="about-me pt-4 pt-md-0">
+      <h1 align="center">About me</h1>
+      <p class="lead">
+        My name is Yaman Pandey. I am a Mechanical Engineer working towards my master's degree in
+        Manufacturing Engineering Technology. My hobbies include videography, writing poetry, and hiking.
+      </p>
     </div>
-  </div> 
+  </div>
 </section>
 
-
-  <style>
+<style>
   /* Resume button styling */
   .btn {
     padding: 10px 20px;
@@ -150,66 +190,83 @@
     background-color: #0056b3;
   }
 
-     <!--
-  /* Styles for the runaway button */
-  .runaway-button-container {
-    position: relative;
-    height: 200px; /* Defines the movement area for the button */
-    margin-top: 20px;
-    overflow: hidden; /* Ensures the button stays within the container */
-  }
--->
-    <!--
-  .runaway-button {
-    position: absolute;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #f44336;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: top 0.1s ease, left 0.1s ease, transform 0.1s ease;
+  /* Certified EIT badge animation */
+  .eit-badge {
+    display: inline-block;
+    padding: 4px 12px;
+    border-radius: 999px;
+    border: 1px solid #0078ff;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+    white-space: nowrap;
   }
 
-  .runaway-button:hover {
-    background-color: #d32f2f;
+  .eit-badge.visible {
+    opacity: 1;
+    transform: translateY(0);
   }
-    -->
-</style> 
- 
+
+  /* Optional little glow once visible */
+  .eit-badge.visible {
+    box-shadow: 0 0 8px rgba(0, 120, 255, 0.35);
+  }
+
+  /* Basic socials styling (if not already styled by your theme) */
+  .socials ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    display: flex;
+    gap: 10px;
+  }
+
+  .socials ul li {
+    display: inline-block;
+  }
+
+  .socials .ico-circle {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #0078ff;
+  }
+</style>
+
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const button = document.querySelector('#about .runaway-button');
-    const container = document.querySelector('#about .runaway-button-container');
+  document.addEventListener('DOMContentLoaded', function () {
+    const badge = document.getElementById('certified-eit');
+    if (!badge) return;
 
-    button.addEventListener('mouseover', () => {
-      const containerRect = container.getBoundingClientRect();
-      const buttonRect = button.getBoundingClientRect();
+    // Use IntersectionObserver so the badge appears when scrolled into view
+    if ('IntersectionObserver' in window) {
+      const observer = new IntersectionObserver(
+        (entries, obs) => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              badge.classList.add('visible');
+              obs.unobserve(entry.target); // only animate once
+            }
+          });
+        },
+        {
+          threshold: 0.5 // 50% of badge in view
+        }
+      );
 
-      // Generate new random position within the container bounds
-      const newTop = Math.random() * (containerRect.height - buttonRect.height);
-      const newLeft = Math.random() * (containerRect.width - buttonRect.width);
-
-      // Apply the new position
-      button.style.top = `${newTop}px`;
-      button.style.left = `${newLeft}px`;
-
-      // Add playful jump animation
-      button.style.transform = `scale(1.1)`;
-      setTimeout(() => {
-        button.style.transform = `scale(1)`;
-      }, 100);
-    });
-
-    // Prevent the button from being clicked (fallback in case the user gets lucky)
-    button.addEventListener('click', (event) => {
-      event.preventDefault();
-      alert("Nice Try! You knew it was a prank!");
-    });
+      observer.observe(badge);
+    } else {
+      // Fallback for very old browsers
+      badge.classList.add('visible');
+    }
   });
 </script>
-
 
 
 
