--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <!-- Placeholder image – replace src with your actual certificate image later -->
               <div class="cert-image-wrapper">
                 <img
-                  src="assets/img/greenbelt.jpg"
+                  src="assets/img/GreenBelt.jpg"
                   alt="Lean Six Sigma Green Belt Certificate Placeholder"
                   class="img-fluid cert-image"
                 >
@@ -451,7 +451,7 @@
                     </div>
                     <p class="lead">
                    My name is Yaman Pandey. I am a Mechanical Engineer working towards my masters degree in Manufacturing 
-                      Engineering Technology. My hobbies includes videography, writing poetry, and hiking. 
+                      Engineering Technology. I am also a certified EIT and certified Lean Six Sigma Green Belt. My hobbies includes videography, writing poetry, and hiking. 
                     </p>
                     
                   </div>
