Update celebration message in Valentine.html

--- a/Valentine.html
+++ b/Valentine.html
@@ -118,7 +118,7 @@
   </div>
 
   <div class="celebration" id="celebration">
-    <h1>xyz xyz xyz 🎉💖</h1>
+    <h1> Thank you, Meri Maya, Meri forever valentine. Yaman loves you. 🎉💖</h1>
   </div>
 
   <script>
